[tool.poetry]
name = "lucier"
version = "0.1.0"
description = "Tools for realizing Alvin Lucier's I Am Sitting in a Room using a Blumlein pair for mid-side recording"
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
sounddevice = "^0.4.4"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
